[tool.poetry]
name = "efl-ph-cc-time-of-day"
version = "0.1.0"
description = ""
authors = ["Curtis West <curtis@curtiswest.net>"]
readme = "README.md"
packages = [{include = "efl_ph_cc_time_of_day"}]

[tool.poetry.dependencies]
python = "3.8.9"
streamlit = {version="1.20.0", python = ">=3.8.9,<3.9.7 || >3.9.7,<4.0.0"}
pandas = "*"
plotly = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

